Opened 6 years ago

Closed 6 years ago

Last modified 5 years ago

#14986 closed bug (fixed)

[Tracker] memory leaking after launching theScheduler

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1/beta2
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #15075
Platform: All

Description

I'm not really sure what component it should be.

After starting this 32bit app on 64bit(!) Haiku hrev53013 I observe high CPU usage in these two threads:

registrar -> main_mime
Tracker -> launch looper

http://www.pinc-software.de/files/theScheduler-1.1.0.zip

Attachments (1)

slayer.png (70.7 KB ) - added by diver 6 years ago.

Download all attachments as: .zip

Change History (11)

comment:1 by axeld, 6 years ago

Have you tried other 32-bit apps, if they behave in the same way? There shouldn't be anything special with this application, at least.

And you say "memory leaking" in the title, and high CPU usage in the summary -- is both happening? Is the CPU usage staying high all the time after that? Is memory continually decreasing? Or does it stop after a while?

in reply to:  1 comment:2 by diver, 6 years ago

Replying to axeld:

Have you tried other 32-bit apps

Just tried 32bit BePDF and it fails to start as expected with "Not an executable" message. (Side note: would be nice to detect architecture and show "You're trying to run 32bit executable which is not supported.")

And you say "memory leaking" in the title, and high CPU usage in the summary -- is both happening?

Yes, sorry for confusion.

Is the CPU usage staying high all the time after that?

Yes.

Is memory continually decreasing? Or does it stop after a while?

No and no.

See attached screenshot:

Last edited 6 years ago by diver (previous) (diff)

comment:3 by diver, 6 years ago

Restarting Tracker fixes both CPU usage of registrar + Tracker and memory leaking.

by diver, 6 years ago

Attachment: slayer.png added

comment:4 by CodeforEvolution, 6 years ago

I believe I've experienced an issue like this too. When trying to open an app with incompatible symbols with the version of Haiku being used, I see the app continuously appear and disappear from Process Monitor along with a high CPU usage from Tracker and registrar. The only way to stop this loop for me is to kill registrar itself. When registrar is finally killed, an error message of why the program couldn't be opened appears (not related to the registrar not being available). Of course, this forces me to reboot, as once registrar is closed, it can't be restarted, and the system is unable to launch any more programs. So, I definitely believe this is some sort of conflict between registrar and runtime_loader.

Last edited 6 years ago by CodeforEvolution (previous) (diff)

comment:5 by diver, 6 years ago

I managed to reproduce it by running /system/apps/Qt5/qdoc from Tracker but only once.

comment:6 by waddlesplash, 6 years ago

I just realized hrev52968 may be related here, but I didn't investigate too closely.

comment:7 by waddlesplash, 6 years ago

Blocking: 15075 added

comment:8 by waddlesplash, 6 years ago

#11582 may also tie into this somehow.

comment:9 by waddlesplash, 6 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev53399.

comment:10 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.